<resources>
    <string name="app_name">Exerboost</string>

    //introactivity
    <string name="introactivity_skip">Skip</string>
    <string name="introactivity_create_an_account">Create an account</string>
    <string name="introactivity_login">login</string>

    //loginactivity
    <string name="loginactivity_skip">Skip</string>
    <string name="loginactivity_login_to_your_account">Login to your account</string>
    <string name="loginactivity_good_to_see_you_again_enter_your_details_below_to_continue_ordering">Good,to see you again, enter your details below to continue ordering.</string>
    <string name="loginactivity_create_an_account">Create an account</string>
    <string name="loginactivity_login">Login to my account</string>
    <string name="loginactivity_sign_in_with_google">Sign in with Google</string>

    //forgotpassactivity
    <string name="forgotpassactivity_cancel">Cancel</string>
    <string name="forgotpassactivity_forgot_password">Forgot Password</string>
    <string name="forgotpassactivity_enter_your_email_ddress">Enter your email address to request a password reset</string>
    <string name="forgotpassactivity_send_email">Send Email</string>
    <string name="forgotpassactivity_login">Login to my account</string>
    <string name="forgotpassactivity_sign_in_with_google"><u>Sign in with Google</u></string>

    //resetpassactivity
    <string name="resetpassactivity_cancel">Cancel</string>
    <string name="resetpassactivity_reset_password">Reset Password</string>
    <string name="resetpassactivity_a_reset_code_has_been_sent_to_your_mail">A reset code has been sent to your mail</string>
    <string name="resetpassactivity_login">Login to my account</string>
    <string name="resetpassactivity_resetPasswordButton">Reset Password</string>

    //registeractivity
    <string name="registeractivity_Welcome_friend">Welcome friend, enter your details so lets get started in ordering food</string>
    <string name="registeractivity_skip">Skip</string>
    <string name="registeractivity_enter_email">Enter Email</string>
    <string name="registeractivity_enter_password">Enter Password</string>
    <string name="registeractivity_sign_in_with_google">Sign in with Google</string>
    <string name="registeractivity_login">Login to my account</string>
    <string name="registeractivity_create_an_account">Create an account</string>
    <string name="resetpassactivity_enterCode">Enter Code</string>


    <string name="web_client_id">200175132575-b4fvm221sbgnq9800u94gfp9ufrtpmch.apps.googleusercontent.com</string>
    <string name="delivery_toText">Delivery To</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="open_navigation_drawer">Open drawer</string>
    <string name="close_navigation_drawer">Close drawer</string>
    <string name="order_again"><u>Order Again</u></string>
    <string name="title_home">Home</string>
    <string name="title_favourite">Orders</string>
    <string name="title_favorite">Favourite</string>
    <string name="title_chat">Chat</string>
    <string name="title_notifications">Notification</string>
    <string name="title_profile">Profile</string>
    <string name="empty_value">Empty Value</string>
    <string name="count">Count</string>

</resources>