<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rootLayoutOfRegister"
    tools:context=".activity.auth.register.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/skipTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dmsans_medium"
            android:text="@string/registeractivity_skip"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            app:layout_constraintTop_toTopOf="@id/guideline_top" />

        <TextView
            android:id="@+id/create_an_account_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:fontFamily="@font/dmsans_bold"
            android:text="@string/registeractivity_create_an_account"
            android:textColor="@color/colorSecondary"
            android:textSize="@dimen/_24ssp"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/skipTextView" />

        <TextView
            android:id="@+id/welcomeFriendTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/dmsans_regular"
            android:text="@string/registeractivity_Welcome_friend"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/create_an_account_textview" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailAddressInputLayout"
            style="@style/TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:hint="@string/registeractivity_enter_email"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintStart_toStartOf="@+id/welcomeFriendTextView"
            app:layout_constraintTop_toBottomOf="@+id/welcomeFriendTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textAppearance="@style/InputTextAppearance"
                android:textColor="@color/colorSecondary" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInputLayout"
            style="@style/TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:hint="@string/registeractivity_enter_password"
            app:layout_constraintEnd_toStartOf="@id/guideline_right"
            app:layout_constraintStart_toStartOf="@+id/emailAddressInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/emailAddressInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textAppearance="@style/InputTextAppearance"
                android:textColor="@color/colorSecondary" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmPasswordInputLayout"
            style="@style/TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:hint="Confirm Password"
            app:layout_constraintEnd_toStartOf="@id/guideline_right"
            app:layout_constraintStart_toStartOf="@+id/emailAddressInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirmPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textAppearance="@style/InputTextAppearance"
                android:textColor="@color/colorSecondary" />

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/termsAndConditionCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Terms &amp; Policy"
            android:textSize="@dimen/_14ssp"
            android:fontFamily="@font/dmsans_medium"
            android:layout_marginTop="@dimen/_8sdp"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/confirmPasswordInputLayout" />


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/sign_in_with_google"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/button_bg"
            android:backgroundTint="@color/white"
            android:orientation="horizontal"
            app:cardCornerRadius="@dimen/_6sdp"
            app:cardElevation="@dimen/_2sdp"
            app:layout_constraintBottom_toTopOf="@id/createAccountButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/termsAndConditionCheckBox">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_google"
                android:drawablePadding="@dimen/_10sdp"
                android:fontFamily="@font/dmsans_regular"
                android:layout_gravity="center"
                android:text="@string/registeractivity_sign_in_with_google"
                android:textColor="@color/colorSecondary"
                android:textSize="@dimen/_13sdp" />
        </com.google.android.material.card.MaterialCardView>




        <com.google.android.material.button.MaterialButton
            android:id="@+id/createAccountButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/_46sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_30sdp"
            android:background="@drawable/gradient_app_color"
            android:letterSpacing="0"
            android:text="@string/registeractivity_create_an_account"
            android:textAllCaps="false"
            android:textSize="@dimen/_14ssp"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toTopOf="@+id/loginTextView"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/sign_in_with_google"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/loginTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_25sdp"
            android:fontFamily="@font/dmsans_medium"
            android:text="@string/registeractivity_login"
            android:textAlignment="viewEnd"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_16sdp"
            app:layout_constraintBottom_toBottomOf="@id/guideline_bottom"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            app:layout_constraintStart_toStartOf="@id/guideline_left" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/_16sdp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="@dimen/_16sdp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/_16sdp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/_16sdp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>