<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.auth.resetPassword.ResetPasswordActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/cancelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dmsans_medium"
            android:text="@string/resetpassactivity_cancel"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            app:layout_constraintTop_toTopOf="@id/guideline_top" />

        <TextView
            android:id="@+id/reset_password_TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_42sdp"
            android:fontFamily="@font/dmsans_bold"
            android:gravity="center"
            android:text="@string/resetpassactivity_reset_password"
            android:textColor="@color/colorSecondary"
            android:textSize="@dimen/_21ssp"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/cancelTextView" />

        <TextView
            android:id="@+id/a_reset_codeTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:fontFamily="@font/dmsans_regular"
            android:gravity="center"
            android:text="@string/resetpassactivity_a_reset_code_has_been_sent_to_your_mail"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/reset_password_TextView" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:id="@+id/pinViewLayout"
            android:gravity="center"
            android:layout_marginTop="@dimen/_50sdp"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintEnd_toEndOf="@+id/guideline_right"
            app:layout_constraintTop_toBottomOf="@+id/a_reset_codeTextView">

            <com.library.pinview.PinView
                android:id="@+id/pinView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:cursorVisible="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:includeFontPadding="false"
                android:inputType="number"
                android:lineSpacingExtra="0dp"
                android:textColor="@color/pin_view_text_colors"
                app:cursorColor="@color/pin_view_line_selected"
                app:cursorWidth="@dimen/_1sdp"
                app:itemCount="4"
                app:itemHeight="@dimen/_40sdp"
                app:itemRadius="@dimen/_2sdp"
                app:itemSpacing="@dimen/_2sdp"
                app:itemWidth="@dimen/_40sdp"
                app:lineColor="@color/pin_view_line_colors"
                app:lineWidth="@dimen/_1sdp"
                app:viewType="rectangle" />
        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/createAccountButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/_46sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_30sdp"
            android:background="@drawable/gradient_app_color"
            android:letterSpacing="0"
            android:text="@string/resetpassactivity_create_an_account"
            android:textAllCaps="false"
            android:textSize="@dimen/_12ssp"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toTopOf="@+id/loginTextView"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/pinViewLayout"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/loginTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_25sdp"
            android:fontFamily="@font/dmsans_medium"
            android:text="@string/resetpassactivity_login"
            android:textAlignment="viewEnd"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_16sdp"
            app:layout_constraintBottom_toBottomOf="@id/guideline_bottom"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            app:layout_constraintStart_toStartOf="@id/guideline_left" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/_16sdp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="@dimen/_16sdp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/_16sdp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/_16sdp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>