<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayoutOfForgotPassword"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.auth.forgot_password.ForgotPasswordActivity">

<!--    <ScrollView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="0dp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent">-->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/cancelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dmsans_medium"
                android:text="@string/resetpassactivity_cancel"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintEnd_toEndOf="@id/guideline_right"
                app:layout_constraintTop_toTopOf="@id/guideline_top" />

            <TextView
                android:id="@+id/reset_password_TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_32sdp"
                android:fontFamily="@font/dmsans_bold"
                android:gravity="center"
                android:text="@string/forgotpassactivity_forgot_password"
                android:textColor="@color/colorSecondary"
                android:textSize="@dimen/_21ssp"
                app:layout_constraintEnd_toEndOf="@id/guideline_right"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@id/cancelTextView" />

            <TextView
                android:id="@+id/aResetCodeTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:fontFamily="@font/dmsans_medium"
                android:gravity="center"
                android:text="@string/forgotpassactivity_enter_your_email_ddress"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="@id/guideline_right"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@id/reset_password_TextView" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailAddressInputLayout"
                style="@style/TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24sdp"
                android:hint="Enter Email Address"
                app:layout_constraintEnd_toStartOf="@+id/guideline_right"
                app:layout_constraintStart_toStartOf="@+id/aResetCodeTextView"
                app:layout_constraintTop_toBottomOf="@+id/aResetCodeTextView">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailAddressEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textAppearance="@style/InputTextAppearance"
                    android:textColor="@color/colorSecondary" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--    <com.google.android.material.card.MaterialCardView-->
            <!--        android:id="@+id/sign_in_with_google"-->
            <!--        android:layout_width="@dimen/_150sdp"-->
            <!--        android:layout_height="@dimen/_35sdp"-->
            <!--        android:layout_marginTop="@dimen/_100sdp"-->
            <!--        android:background="@drawable/button_bg"-->
            <!--        android:backgroundTint="@color/white"-->
            <!--        android:orientation="horizontal"-->
            <!--        app:cardCornerRadius="@dimen/_4sdp"-->
            <!--        app:cardElevation="@dimen/_2sdp"-->
            <!--        app:layout_constraintBottom_toTopOf="@id/createAccountButton"-->
            <!--        app:layout_constraintEnd_toEndOf="parent"-->
            <!--        app:layout_constraintStart_toStartOf="parent"-->
            <!--        app:layout_constraintTop_toBottomOf="@id/emailAddressInputLayout">-->

            <!--        <TextView-->
            <!--            android:layout_width="wrap_content"-->
            <!--            android:layout_height="wrap_content"-->
            <!--            android:drawablmeLeft="@drawable/ic_google"-->
            <!--            android:drawablePadding="@dimen/_10sdp"-->
            <!--            android:fontFamily="@font/dmsans_regular"-->
            <!--            android:layout_gravity="center"-->
            <!--            android:text="@string/registeractivity_sign_in_with_google"-->
            <!--            android:textColor="@color/colorSecondary"-->
            <!--            android:textSize="@dimen/_13sdp" />-->
            <!--    </com.google.android.material.card.MaterialCardView>-->

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sendEmailButton"
                android:layout_width="0dp"
                android:layout_height="@dimen/_46sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/gradient_app_color"
                android:letterSpacing="0"
                android:text="@string/forgotpassactivity_send_email"
                android:fontFamily="@font/dmsans_bold"
                android:textAllCaps="false"
                android:textSize="@dimen/_14ssp"
                app:backgroundTint="@null"
                app:layout_constraintBottom_toTopOf="@+id/guideline_bottom"
                app:layout_constraintEnd_toEndOf="@id/guideline_right"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@id/emailAddressInputLayout"
                app:layout_constraintVertical_bias="1.0" />

<!--            <TextView-->
<!--                android:id="@+id/loginTextView"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="@dimen/_10sdp"-->
<!--                android:layout_marginBottom="@dimen/_25sdp"-->
<!--                android:fontFamily="@font/dmsans_medium"-->
<!--                android:text="@string/forgotpassactivity_login"-->
<!--                android:textAlignment="viewEnd"-->
<!--                android:textColor="@color/colorPrimary"-->
<!--                android:textSize="@dimen/_16sdp"-->
<!--                app:layout_constraintBottom_toBottomOf="@id/guideline_bottom"-->
<!--                app:layout_constraintEnd_toEndOf="@id/guideline_right"-->
<!--                app:layout_constraintStart_toStartOf="@id/guideline_left" />-->

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="@dimen/_16sdp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_end="@dimen/_16sdp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/_8sdp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/_8sdp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

<!--    </ScrollView>-->

</androidx.constraintlayout.widget.ConstraintLayout>


